--- a/src/css/tablet.css
+++ b/src/css/tablet.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+@media (max-width: 960px) {
 @font-face {
     font-family: 'Netflix Sans';
     src: url(../font/NetflixSans-Light.otf) format(opentype), 
@@ -25,7 +26,7 @@ body{
 }
 
 #netflix-logo{
-    width: 160px;
+    width: 100px;
 }
 
 #options-header{
@@ -104,12 +105,12 @@ main{
 }
 
 #home h1{
-    font-size: 50px;
+    font-size: 30px;
     margin-bottom: 20px;
     font-weight: bold;
 }
 #textopri-home{
-    font-size: 25px;
+    font-size: 20px;
     text-justify:  distribute;
     margin-bottom: 20px;
 }
@@ -203,32 +204,36 @@ main{
 #tv{
     margin-top: -70px;
     width: 100%;
-    height: 529px;
+    height: 610px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: black;
 }
 #informacoes-tv{
-    margin: 50px;
+    margin: 50px 50px 0px 50px;
     width: 514.08px;
     display: flex;
     flex-direction: column;
-
+    text-align: center;
 }
 
 #informacoes-tv h1{
-    font-size: 45px;
+    font-size: 25px;
 
 }
 
 #informacoes-tv p{
-    font-size: 25px;
+    font-size: 20px;
     margin-top: 15px;
 }
 
 .manter-tv{
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .manter-tv img{
@@ -240,7 +245,7 @@ main{
     position: absolute;
     display: flex;
     width: 60%;
-    left: 10%;
+    left: 20%;
     top: 20%;
 }
 
@@ -249,8 +254,9 @@ main{
     position: relative;
     margin-top: 10px;
     width: 100%;
-    height: 529px;
+    height: 610px;
     display: flex;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     background-color: black;
@@ -261,25 +267,26 @@ main{
     width: 514.08px;
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 #informacoes-onde-quiser h1{
-    font-size: 45px;
+    font-size: 25px;
 }
 
 #informacoes-onde-quiser p{
-    font-size: 25px;
+    font-size: 15px;
     margin-top: 15px;
 }
 
 #onde-quiser img{
-    position: relative;
     width: 80%;
 }
 
 .manter-disp{
     position: relative;
 
+    margin-left: 125px;
 }
 
 .manter-disp video{
@@ -291,44 +298,48 @@ main{
 
 /*Kids*/
 #kids{
+    flex-direction: column;
     margin-top: 10px;
     width: 100%;
-    height: 529px;
+    height: 610px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
 }
 
 #kids img{
-    width: 35%;
-    margin-right: 50px;
+    width: 40%;
+    margin-left: 70px;
 }
 
 #informacoes-kids{
     margin: 50px;
     width: 50%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 #informacoes-kids h1{
-    font-size: 45px;
-    width: 350px;
+    font-size: 25px;
+
 }
 
 #informacoes-kids p{
-    font-size: 25px;
+    font-size: 15px;
     margin-top: 15px;
 }
 
 /*Download*/
 #download{
+    flex-direction: column-reverse;
     margin-top: 10px;
     width: 100%;
-    height: 529px;
+    height: 610px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     background-color: black;
     gap: -50px;
@@ -339,23 +350,28 @@ main{
 }
 
 #informacoes-download{
+    margin-top: 25px;
     width: 44%;
     display: flex;
     flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 #informacoes-download h1{
-    font-size: 45px;
-    width: 350px;
+    font-size: 25px;
 }
 
 #informacoes-download p{
-    font-size: 25px;
+    font-size: 15px;
     margin-top: 15px;
 }
 
 .manter-download{
     position: relative;
+
+    width: 60%;
 }
 
 .manter-download img{
@@ -568,3 +584,5 @@ footer p{
     border: 1px solid #232323;
 }
 
+
+}
